--- a/index.html
+++ b/index.html
@@ -6,5 +6,5 @@ Testing.
 Not sure why the previous code is showing up instead.
 How to make a github page with theme: https://github.community/t5/GitHub-Pages/Page-not-showing-the-theme/td-p/5545
 
-<a href = "mindecrypt.github.io/test.html"> link </a>
+<a href = "/test.html"> link </a>
 .
