--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 ---
 layout: default
 ---
-
-Testing.
+<a href = "zen_doodle/zen_doodle_bird_01.pdf"> Zen Doodle Bird 01 </a>
+<!-- Testing.
 Not sure why the previous code is showing up instead.
 How to make a github page with theme: https://github.community/t5/GitHub-Pages/Page-not-showing-the-theme/td-p/5545
 
@@ -18,4 +18,4 @@ document.getElementById("fancy").addEventListener(
         document.getElementById("fancy").style.backgroundColor = '#' + Math.floor(Math.random() * 16777215).toString(16);
     }
 );
-</script>
+</script> -->
