--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 ---
 layout: default
 ---
-<a href = "zen_doodle/zen_doodle_bird_01.pdf"> Zen Doodle Bird 01 </a>
+<a href = "https://mindecrypt.github.io/zen_doodle/zen_doodle_bird_01.pdf"> Zen Doodle Bird 01 </a>
 <!-- Testing.
 Not sure why the previous code is showing up instead.
 How to make a github page with theme: https://github.community/t5/GitHub-Pages/Page-not-showing-the-theme/td-p/5545
