Update index.html with sketchfab link

--- a/index.html
+++ b/index.html
@@ -97,6 +97,12 @@ iframe {
         <div class="links">
             <a href="https://sketchfab.com/zenartdesign" target="_blank">View Full Sketchfab Profile</a>
         </div>
+        <div class="sketchfab-embed-wrapper"> 
+            <iframe title="Chinese Pavilion in the Clouds | 亭子" frameborder="0" allowfullscreen mozallowfullscreen="true" webkitallowfullscreen="true" allow="autoplay; fullscreen; xr-spatial-tracking" xr-spatial-tracking execution-while-out-of-viewport execution-while-not-rendered web-share src="https://sketchfab.com/models/4aabed7364fa41719c0da99a89e1c634/embed"> </iframe> 
+            <p style="font-size: 13px; font-weight: normal; margin: 5px; color: #4A4A4A;"> 
+                <a href="https://sketchfab.com/3d-models/chinese-pavilion-in-the-clouds-4aabed7364fa41719c0da99a89e1c634?utm_medium=embed&utm_campaign=share-popup&utm_content=4aabed7364fa41719c0da99a89e1c634" target="_blank" rel="nofollow" style="font-weight: bold; color: #1CAAD9;"> Chinese Pavilion in the Clouds | 亭子 </a> by <a href="https://sketchfab.com/zenartdesign?utm_medium=embed&utm_campaign=share-popup&utm_content=4aabed7364fa41719c0da99a89e1c634" target="_blank" rel="nofollow" style="font-weight: bold; color: #1CAAD9;"> Zen Apricorna </a> on <a href="https://sketchfab.com?utm_medium=embed&utm_campaign=share-popup&utm_content=4aabed7364fa41719c0da99a89e1c634" target="_blank" rel="nofollow" style="font-weight: bold; color: #1CAAD9;">Sketchfab</a>
+            </p>
+        </div>
     </div>
 
     <div class="glass-card">
