Update index.html sketchfab and YouTube links

--- a/index.html
+++ b/index.html
@@ -89,27 +89,21 @@ iframe {
 <div class="section">
 
     <div class="glass-card">
-        <h2>🎨 Featured Sketchfab Objects</h2>
-        <iframe title="Sketchfab"
-        height="480"
-        src="https://sketchfab.com/models/7w7pAfr123/embed">
-        </iframe>
-        <div class="links">
-            <a href="https://sketchfab.com/zenartdesign" target="_blank">View Full Sketchfab Profile</a>
-        </div>
+        <h2>🎨 3D Modelling</h2>
         <div class="sketchfab-embed-wrapper"> 
             <iframe title="Chinese Pavilion in the Clouds | 亭子" frameborder="0" allowfullscreen mozallowfullscreen="true" webkitallowfullscreen="true" allow="autoplay; fullscreen; xr-spatial-tracking" xr-spatial-tracking execution-while-out-of-viewport execution-while-not-rendered web-share src="https://sketchfab.com/models/4aabed7364fa41719c0da99a89e1c634/embed"> </iframe> 
             <p style="font-size: 13px; font-weight: normal; margin: 5px; color: #4A4A4A;"> 
                 <a href="https://sketchfab.com/3d-models/chinese-pavilion-in-the-clouds-4aabed7364fa41719c0da99a89e1c634?utm_medium=embed&utm_campaign=share-popup&utm_content=4aabed7364fa41719c0da99a89e1c634" target="_blank" rel="nofollow" style="font-weight: bold; color: #1CAAD9;"> Chinese Pavilion in the Clouds | 亭子 </a> by <a href="https://sketchfab.com/zenartdesign?utm_medium=embed&utm_campaign=share-popup&utm_content=4aabed7364fa41719c0da99a89e1c634" target="_blank" rel="nofollow" style="font-weight: bold; color: #1CAAD9;"> Zen Apricorna </a> on <a href="https://sketchfab.com?utm_medium=embed&utm_campaign=share-popup&utm_content=4aabed7364fa41719c0da99a89e1c634" target="_blank" rel="nofollow" style="font-weight: bold; color: #1CAAD9;">Sketchfab</a>
             </p>
         </div>
+        <div class="links">
+            <a href="https://sketchfab.com/zenartdesign" target="_blank">View Full Sketchfab Profile</a>
+        </div>
     </div>
 
     <div class="glass-card">
         <h2>🖌 Art YouTube Channel</h2>
-        <iframe height="480"
-        src="https://www.youtube.com/embed?listType=user_uploads&list=zenartdesign1225">
-        </iframe>
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/LDFc74cHS_4?si=3CjsDKxwmrZwxaWG" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
         <div class="links">
             <a href="https://www.youtube.com/@zenartdesign1225" target="_blank">Visit Art Channel</a>
         </div>
@@ -118,7 +112,10 @@ iframe {
     <div class="glass-card">
         <h2>🎵 Music & Cinematic Sound</h2>
         <iframe height="480"
-        src="https://www.youtube.com/embed/MWVwRgKoiUQ">
+            src="https://www.youtube.com/embed/MWVwRgKoiUQ">
+        </iframe>
+        <iframe height="480"
+            src="https://www.youtube.com/watch?v=KRlo-WDi8gw">
         </iframe>
         <div class="links">
             <a href="https://www.youtube.com/@zenartmusic2967" target="_blank">Music Channel</a>
