Update index.html video embedding

--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@ iframe {
     <div class="glass-card">
         <h2>🎨 3D Modelling</h2>
         <div class="sketchfab-embed-wrapper"> 
-            <iframe title="Chinese Pavilion in the Clouds | 亭子" frameborder="0" allowfullscreen mozallowfullscreen="true" webkitallowfullscreen="true" allow="autoplay; fullscreen; xr-spatial-tracking" xr-spatial-tracking execution-while-out-of-viewport execution-while-not-rendered web-share src="https://sketchfab.com/models/4aabed7364fa41719c0da99a89e1c634/embed"> </iframe> 
+            <iframe height="480" title="Chinese Pavilion in the Clouds | 亭子" frameborder="0" allowfullscreen mozallowfullscreen="true" webkitallowfullscreen="true" allow="autoplay; fullscreen; xr-spatial-tracking" xr-spatial-tracking execution-while-out-of-viewport execution-while-not-rendered web-share src="https://sketchfab.com/models/4aabed7364fa41719c0da99a89e1c634/embed"> </iframe> 
             <p style="font-size: 13px; font-weight: normal; margin: 5px; color: #4A4A4A;"> 
                 <a href="https://sketchfab.com/3d-models/chinese-pavilion-in-the-clouds-4aabed7364fa41719c0da99a89e1c634?utm_medium=embed&utm_campaign=share-popup&utm_content=4aabed7364fa41719c0da99a89e1c634" target="_blank" rel="nofollow" style="font-weight: bold; color: #1CAAD9;"> Chinese Pavilion in the Clouds | 亭子 </a> by <a href="https://sketchfab.com/zenartdesign?utm_medium=embed&utm_campaign=share-popup&utm_content=4aabed7364fa41719c0da99a89e1c634" target="_blank" rel="nofollow" style="font-weight: bold; color: #1CAAD9;"> Zen Apricorna </a> on <a href="https://sketchfab.com?utm_medium=embed&utm_campaign=share-popup&utm_content=4aabed7364fa41719c0da99a89e1c634" target="_blank" rel="nofollow" style="font-weight: bold; color: #1CAAD9;">Sketchfab</a>
             </p>
@@ -110,13 +110,9 @@ iframe {
     </div>
 
     <div class="glass-card">
-        <h2>🎵 Music & Cinematic Sound</h2>
-        <iframe height="480"
-            src="https://www.youtube.com/embed/MWVwRgKoiUQ">
-        </iframe>
-        <iframe height="480"
-            src="https://www.youtube.com/watch?v=KRlo-WDi8gw">
-        </iframe>
+        <h2>🎵 Music Production</h2>
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/MWVwRgKoiUQ?si=hxyEE9PbTo_3PE8B" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/KRlo-WDi8gw?si=d1Y2MoBuPwkvVFu-" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
         <div class="links">
             <a href="https://www.youtube.com/@zenartmusic2967" target="_blank">Music Channel</a>
         </div>
@@ -124,16 +120,15 @@ iframe {
 
     <div class="glass-card">
         <h2>📸 Instagram</h2>
-        <p>@hello.world.123.456</p>
         <div class="links">
-            <a href="https://www.instagram.com/hello.world.123.456" target="_blank">Open Instagram</a>
+            <a href="https://www.instagram.com/hello.world.123.456" target="_blank">@hello.world.123.456</a>
         </div>
     </div>
 
     <div class="glass-card">
         <h2>🌐 Website & Professional</h2>
         <div class="links">
-            <a href="https://your-wix-placeholder.wixsite.com/art" target="_blank">Art Website</a>
+            <a href="https://gloriayuliang.wixsite.com/gloria-artworks" target="_blank">Art Website</a>
             <a href="https://linkedin.com/in/your-linkedin-placeholder" target="_blank">LinkedIn</a>
         </div>
     </div>
