--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@ iframe {
 
     <div class="glass-card">
         <h2>🖌 Art YouTube Channel</h2>
-        <iframe width="560" height="315" src="https://www.youtube.com/embed/LDFc74cHS_4?si=3CjsDKxwmrZwxaWG" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/2FTVQ8d2Xag?si=6_EBIkK8VwBu7COa" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
         <div class="links">
             <a href="https://www.youtube.com/@zenartdesign1225" target="_blank">Visit Art Channel</a>
         </div>
